--- a/www/0.html
+++ b/www/0.html
@@ -1,8 +1,15 @@
+<!doctype html>
 <html>
-<title>
-    hello
-</title>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Untitled Document</title>
+</head>
+
 <body>
-ghjhjhd
+
+
+
 </body>
+
 </html>
