--- a/www/2/2.html
+++ b/www/2/2.html
@@ -27,6 +27,56 @@
     </p>
     <br>
     <a href="https://www.marvel.com/" title="Marvel">Marvel</a>
+
+    <h2>Мои любимые игры</h2>
+
+    <ul>
+        <li>Brawl Stars</li>
+        <li type="circle">Minecraft</li>
+        <li type="square">Grand Theft Auto V</li>
+    </ul>
+
+    <ol>
+        <li type="1" value="100">Brawl Stars</li>
+        <li type="1">Minecraft</li>
+        <li type="1">Grand Theft Auto V</li>
+        <li type="1">Far Cry</li>
+    </ol>
+
+
+    <table border="3" bordercolor="red" cellspacing="0" bgcolor="yellow" align="center">
+        <tr>
+            <th>Назва</th>
+            <th>Вихід (мл)</th>
+            <th>Ціна(грн)</th>
+        </tr>
+        <tr>
+            <td>Кава з прянощами</td>
+            <td align="center">120</td>
+            <td>49,00</td>
+        </tr>
+        <tr>
+            <td colspan="3" align="center">Чая нет</td>
+        </tr>
+        <tr>
+            <td>Вода</td>
+            <td align="center">500</td>
+            <td>20,00</td>
+        </tr>
+    </table>
+
+
+    <table border="1">
+        <tr>
+            <td rowspan="2" bgcolor="yellow">Ячейка 1</td>
+            <td>Ячейка 2</td>
+        </tr>
+        <tr>
+            <td>Ячейка 3</td>
+        </tr>
+    </table>
+
+
 </body>
 
 </html>
