--- a/www/2/2_2.html
+++ b/www/2/2_2.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <!--
     <img src="All-big-hero.gif" alt="Baymax">
     <img src="images/Baymax.gif" alt="Baymax">
     <img src="images/Baymax.gif" alt="Baymax">
@@ -64,6 +65,59 @@
     «I Am Satisfied With My Care»
     «Signs of Life»
     «Reboot»
+-->
+
+
+    <table border="3" bordercolor="blue" cellspacing="0" align="center" bgcolor="yellow" cellpadding="5">
+
+        <tr>
+            <td rowspan="5">
+                <a href="https://starbucks.com" title="Купить кофе" target="_blank"> <img src="Baymax.gif" height="50" width="80"></a>
+            </td>
+            <th>Назва</th>
+            <th>Вихід (мл)</th>
+            <th>Ціна(грн)</th>
+        </tr>
+        <tr>
+            <td>
+                <font color="red">Кава з прянощами(кардамоном)</font>
+            </td>
+            <td align="center">120</td>
+            <td>49,00</td>
+        </tr>
+        <tr>
+            <td>Чай з лимоном</td>
+            <td align="center">100</td>
+            <td>15,00</td>
+        </tr>
+        <tr>
+            <td>Какао</td>
+            <td align="center">200</td>
+            <td>25,00</td>
+        </tr>
+        <tr>
+            <td>Вода</td>
+            <td align="center">500</td>
+            <td>10,00</td>
+        </tr>
+    </table>
+    <br>
+    <table border="1" bgcolor="yellow" align="center" cellpadding="4">
+        <tr>
+            <td rowspan="2" width="200">Ячейка 1</td>
+            <td colspan="2" align="center">Ячейка 2</td>
+        </tr>
+        <tr>
+            <td>Ячейка 5</td>
+            <td>Ячейка 6</td>
+        </tr>
+    </table>
+
+
+
+
+
+
 
 
 </body>
